<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewTestDirections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/debugMode"
            android:textColor="@color/yellow" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/userName"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewYourScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingBottom="3dp"
                android:paddingRight="4pt"
                android:text="@string/my_score"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewMyScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewUserName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="4pt"
                android:text="@string/turn_total"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTurnTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewUserName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="4pt"
                android:paddingTop="3dp"
                android:text="@string/redsRemaining"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewNumReds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewUserNumWinsHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="4pt"
                android:text="@string/greensRemaining"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewNumGreens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-10dp"
        android:layout_marginTop="-15dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:src="@drawable/splash" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonDrawGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:gravity="center_vertical|center_horizontal"
                android:shadowColor="@color/black"
                android:shadowRadius="4"
                android:text="@string/drawGreen"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <Button
                android:id="@+id/buttonDrawRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_red"
                android:shadowColor="@color/black"
                android:shadowRadius="4"
                android:text="@string/drawRed"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/buttonHold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_yellow"
                android:shadowColor="@color/black"
                android:shadowRadius="4"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>